JSW Devsb/src/objects/ASM_Targets__c.object
<CustomObject>
    <fields>
        <fullName>ASM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ASM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASM_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual__c</fullName>
        <label>Actual</label>
        <summarizedField>Monthly_Dealer_Target__c.Actuals__c</summarizedField>
        <summaryForeignKey>Monthly_Dealer_Target__c.ASM_Target__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>CreatedBy.FirstName  + &apos; &apos; + CASE(MONTH( Date__c ), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;) + &apos; &apos; + &apos;Target&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <summarizedField>Monthly_Dealer_Target__c.Target__c</summarizedField>
        <summaryForeignKey>Monthly_Dealer_Target__c.ASM_Target__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Zonal_Head__c</fullName>
        <label>State Head</label>
        <referenceTo>Zonal_Head__c</referenceTo>
        <relationshipLabel>ASM Targets</relationshipLabel>
        <relationshipName>ASM_Targets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>ASM Target</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ASM__c</columns>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASM-{0000}</displayFormat>
        <label>ASM Targets Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASM Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>